Feature flags, day2 part1 solution

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,10 @@ version = "0.1.0"
 authors = ["cfiet"]
 edition = "2018"
 
+[features]
+day1 = []
+day2 = []
+day3 = []
+all = ["day1", "day2", "day3"]
+
 [dependencies]
