--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,9 @@ day1 = []
 day2 = []
 day3 = []
 day4 = []
+day5 = []
 all = ["day1", "day2", "day3", "day4"]
-default = ["all"]
+default = ["day5"]
 
 [dependencies]
 regex = "*"
