--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,9 @@ day2 = []
 day3 = []
 day4 = []
 day5 = []
-all = ["day1", "day2", "day3", "day4"]
-default = ["day5"]
+day6 = []
+all = ["day1", "day2", "day3", "day4", "day5", "day6"]
+default = ["day6"]
 
 [dependencies]
 regex = "*"
