--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,9 @@ day3 = []
 day4 = []
 day5 = []
 day7 = []
-all = ["day1", "day2", "day3", "day4", "day5", "day7"]
-default = ["day7"]
+day8 = []
+all = ["day1", "day2", "day3", "day4", "day5", "day7", "day8"]
+default = ["day8"]
 
 [dependencies]
 regex = "*"
