--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,10 @@ day5 = []
 day7 = []
 day8 = []
 day9 = []
-all = ["day1", "day2", "day3", "day4", "day5", "day7", "day8", "day9"]
-default = ["day9"]
-test = ["day9"]
+day10 = []
+all = ["day1", "day2", "day3", "day4", "day5", "day7", "day8", "day9", "day10"]
+default = ["day10"]
+test = ["day10"]
 
 [dependencies]
 regex = "*"
